--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ body {
     margin-bottom: 5%;
 }
 
-
 section #div1 {
     display: grid;
     grid-template-columns: auto auto;
@@ -118,4 +117,14 @@ section #div1 div {
 .link {
     color: chocolate;
     font-style: italic;
+}
+
+.link1 {
+    color: rgb(255, 255, 255);
+    font-style: italic;
+    border-style: solid;
+    border-radius: 5%;
+    background-color: chocolate;
+    text-decoration:underline;
+    text-transform: capitalize !important;
 }
