--- a/style.css
+++ b/style.css
@@ -69,8 +69,8 @@ body {
 section #div1 {
     display: grid;
     grid-template-columns: auto auto;
-    row-gap: 7%;
-    column-gap: 5%;
+    row-gap: 6rem;
+    column-gap: 6rem;
     flex-wrap: wrap;
     margin-top: 5%;
     color: chocolate;
